--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Kanit
+      fonts:
+        - asset: assets/fonts/kanit-Bold.ttf
+        - asset: assets/fonts/kanit-Italic.ttf
+        - asset: assets/fonts/kanit-Regular.ttf
+          style: italic
   # fonts:
   #   - family: Schyler
   #     fonts:
